# kwoo-sensor-collector

./: .gitignore  API.md  Cargo.toml  README.md  config.example.toml  install-service.ps1  uninstall-service.ps1
.github/workflows/: windows.yml
src/: main.rs
